--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>PPT</title>
 </head>
 <body>
-    <h1>This is a test</h1>
-    <h2>Please check console</h2>
+    <h1>PIEDRA PAPEL O TIJERAS</h1>
+    <h2 class="contador" id="contador">Puntuacion</h2>
+        <div class="puntuacion">
+            0-0
+        </div>
+    <h2>Por favor elije uno</h2>
+        <div class="" id="container">
+            <button id="piedra">Piedra</button>
+            <button id="papel">Papel</button>
+            <button id="tijeras">Tijeras</button>
+        </div>
 </body>
 <script src="./main.js"></script>
 </html>
