--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PPT</title>
+    <title>Piedra, Papel o Tijeras</title>
 </head>
 <body>
-    <h1>PIEDRA PAPEL O TIJERAS</h1>
-    <h2 class="contador" id="contador">Puntuacion</h2>
-        <div class="puntuacion">
-            0-0
-        </div>
-    <h2>Por favor elije uno</h2>
-        <div class="" id="container">
-            <button id="piedra">Piedra</button>
-            <button id="papel">Papel</button>
-            <button id="tijeras">Tijeras</button>
-        </div>
+    <h1>Piedra, Papel o Tijeras</h1>
+    <button id="piedra">Piedra</button>
+    <button id="papel">Papel</button>
+    <button id="tijeras">Tijeras</button>
+    <p id="result"></p>
+    <p id="score"></p>
+
+    <script src="main.js"></script>
 </body>
-<script src="./main.js"></script>
 </html>
